--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <title>A new begining</title>
     
     
-    <link rel="preload" href="/blog/assets/css/3.styles.99ce1b28.css" as="style"><link rel="preload" href="/blog/assets/js/app.49bc1633.js" as="script"><link rel="preload" href="/blog/assets/js/1.aca28446.js" as="script"><link rel="prefetch" href="/blog/assets/js/0.30da1cdc.js"><link rel="prefetch" href="/blog/assets/js/2.c73265bd.js">
-    <link rel="stylesheet" href="/blog/assets/css/3.styles.99ce1b28.css">
+    <link rel="preload" href="/assets/css/2.styles.619f71fb.css" as="style"><link rel="preload" href="/assets/js/app.c58e1b0e.js" as="script"><link rel="preload" href="/assets/js/1.a670504b.js" as="script"><link rel="prefetch" href="/assets/js/0.dfa7a99c.js">
+    <link rel="stylesheet" href="/assets/css/2.styles.619f71fb.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container no-navbar no-sidebar"><!----><div class="sidebar"><!----><ul class="sidebar-links"><li><a href="/blog/" class="sidebar-link">Welcome to this page</a></li><li><a href="/blog/index.html" class="active sidebar-link">A new begining</a></li><li><a href="/blog/socool.html" class="sidebar-link">This is so cool!</a></li></ul></div><div class="page"><div class="content"><h1 id="a-new-begining"><a href="#a-new-begining" aria-hidden="true" class="header-anchor">#</a> A new begining</h1></div><!----><div class="content page-nav"><p class="inner"><span class="prev">
-        ← <a href="/blog/" class="prev router-link-active">
-          Welcome to this page
-        </a></span><span class="next"><a href="/blog/socool.html">
-          This is so cool!
+    <div id="app" data-server-rendered="true"><div class="theme-container no-navbar no-sidebar"><!----><div class="sidebar"><!----><ul class="sidebar-links"><li><a href="/index.html" class="active sidebar-link">A new begining</a></li><li><a href="/setup-google-analytics-vuepress.html" class="sidebar-link">How to setup Google Analytics for VuePress</a></li></ul></div><div class="page"><div class="content"><h1 id="a-new-begining"><a href="#a-new-begining" aria-hidden="true" class="header-anchor">#</a> A new begining</h1></div><!----><div class="content page-nav"><p class="inner"><!----><span class="next"><a href="/setup-google-analytics-vuepress.html">
+          How to setup Google Analytics for VuePress
         </a> →
       </span></p></div></div></div></div>
-    <script src="/blog/assets/js/1.aca28446.js" defer></script><script src="/blog/assets/js/app.49bc1633.js" defer></script>
+    <script src="/assets/js/1.a670504b.js" defer></script><script src="/assets/js/app.c58e1b0e.js" defer></script>
   </body>
 </html>
