--- a/404.html
+++ b/404.html
@@ -6,11 +6,11 @@
     <title>VuePress</title>
     
     
-    <link rel="preload" href="/blog/assets/css/3.styles.99ce1b28.css" as="style"><link rel="preload" href="/blog/assets/js/app.49bc1633.js" as="script"><link rel="prefetch" href="/blog/assets/js/0.30da1cdc.js"><link rel="prefetch" href="/blog/assets/js/1.aca28446.js"><link rel="prefetch" href="/blog/assets/js/2.c73265bd.js">
-    <link rel="stylesheet" href="/blog/assets/css/3.styles.99ce1b28.css">
+    <link rel="preload" href="/assets/css/2.styles.619f71fb.css" as="style"><link rel="preload" href="/assets/js/app.c58e1b0e.js" as="script"><link rel="prefetch" href="/assets/js/0.dfa7a99c.js"><link rel="prefetch" href="/assets/js/1.a670504b.js">
+    <link rel="stylesheet" href="/assets/css/2.styles.619f71fb.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1><blockquote>There's nothing here.</blockquote></div></div></div>
-    <script src="/blog/assets/js/app.49bc1633.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1><blockquote>How did we get here?</blockquote></div></div></div>
+    <script src="/assets/js/app.c58e1b0e.js" defer></script>
   </body>
 </html>
