--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>A new begining</title>
+    <title>Welcome</title>
     
     
-    <link rel="preload" href="/assets/css/2.styles.619f71fb.css" as="style"><link rel="preload" href="/assets/js/app.c58e1b0e.js" as="script"><link rel="preload" href="/assets/js/1.a670504b.js" as="script"><link rel="prefetch" href="/assets/js/0.dfa7a99c.js">
+    <link rel="preload" href="/assets/css/2.styles.619f71fb.css" as="style"><link rel="preload" href="/assets/js/app.9ff8b69b.js" as="script"><link rel="preload" href="/assets/js/1.b65f6b51.js" as="script"><link rel="prefetch" href="/assets/js/0.d8f548d6.js">
     <link rel="stylesheet" href="/assets/css/2.styles.619f71fb.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container no-navbar no-sidebar"><!----><div class="sidebar"><!----><ul class="sidebar-links"><li><a href="/index.html" class="active sidebar-link">A new begining</a></li><li><a href="/setup-google-analytics-vuepress.html" class="sidebar-link">How to setup Google Analytics for VuePress</a></li></ul></div><div class="page"><div class="content"><h1 id="a-new-begining"><a href="#a-new-begining" aria-hidden="true" class="header-anchor">#</a> A new begining</h1></div><!----><div class="content page-nav"><p class="inner"><!----><span class="next"><a href="/setup-google-analytics-vuepress.html">
+    <div id="app" data-server-rendered="true"><div class="theme-container no-navbar no-sidebar"><!----><div class="sidebar"><!----><ul class="sidebar-links"><li><a href="/" class="active sidebar-link">Welcome</a></li><li><a href="/setup-google-analytics-vuepress.html" class="sidebar-link">How to setup Google Analytics for VuePress</a></li></ul></div><div class="page"><div class="content"><h1 id="welcome"><a href="#welcome" aria-hidden="true" class="header-anchor">#</a> Welcome</h1></div><!----><div class="content page-nav"><p class="inner"><!----><span class="next"><a href="/setup-google-analytics-vuepress.html">
           How to setup Google Analytics for VuePress
         </a> →
       </span></p></div></div></div></div>
-    <script src="/assets/js/1.a670504b.js" defer></script><script src="/assets/js/app.c58e1b0e.js" defer></script>
+    <script src="/assets/js/1.b65f6b51.js" defer></script><script src="/assets/js/app.9ff8b69b.js" defer></script>
   </body>
 </html>
