--- a/setup-google-analytics-vuepress.html
+++ b/setup-google-analytics-vuepress.html
@@ -6,18 +6,18 @@
     <title>How to setup Google Analytics for VuePress</title>
     
     
-    <link rel="preload" href="/assets/css/2.styles.619f71fb.css" as="style"><link rel="preload" href="/assets/js/app.c58e1b0e.js" as="script"><link rel="preload" href="/assets/js/0.dfa7a99c.js" as="script"><link rel="prefetch" href="/assets/js/1.a670504b.js">
+    <link rel="preload" href="/assets/css/2.styles.619f71fb.css" as="style"><link rel="preload" href="/assets/js/app.9ff8b69b.js" as="script"><link rel="preload" href="/assets/js/0.d8f548d6.js" as="script"><link rel="prefetch" href="/assets/js/1.b65f6b51.js">
     <link rel="stylesheet" href="/assets/css/2.styles.619f71fb.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container no-navbar no-sidebar"><!----><div class="sidebar"><!----><ul class="sidebar-links"><li><a href="/index.html" class="sidebar-link">A new begining</a></li><li><a href="/setup-google-analytics-vuepress.html" class="active sidebar-link">How to setup Google Analytics for VuePress</a></li></ul></div><div class="page"><div class="content"><h1 id="how-to-setup-google-analytics-for-vuepress"><a href="#how-to-setup-google-analytics-for-vuepress" aria-hidden="true" class="header-anchor">#</a> How to setup Google Analytics for VuePress</h1><p>Simple open the vuepress config which is located at <code>.vuepress/config.js</code> and add the following to it :</p><pre class="language-text"><code>module.exports = {
+    <div id="app" data-server-rendered="true"><div class="theme-container no-navbar no-sidebar"><!----><div class="sidebar"><!----><ul class="sidebar-links"><li><a href="/" class="sidebar-link">Welcome</a></li><li><a href="/setup-google-analytics-vuepress.html" class="active sidebar-link">How to setup Google Analytics for VuePress</a></li></ul></div><div class="page"><div class="content"><h1 id="how-to-setup-google-analytics-for-vuepress"><a href="#how-to-setup-google-analytics-for-vuepress" aria-hidden="true" class="header-anchor">#</a> How to setup Google Analytics for VuePress</h1><p>Simple open the vuepress config which is located at <code>.vuepress/config.js</code> and add the following to it :</p><pre class="language-text"><code>module.exports = {
   base: &quot;/blog&quot;,
   ga: &quot;YOUR_GA_TRACKING CODE&quot;
 };
 </code></pre><p>You’re all set!</p></div><!----><div class="content page-nav"><p class="inner"><span class="prev">
-        ← <a href="/index.html" class="prev">
-          A new begining
+        ← <a href="/" class="prev router-link-active">
+          Welcome
         </a></span><!----></p></div></div></div></div>
-    <script src="/assets/js/0.dfa7a99c.js" defer></script><script src="/assets/js/app.c58e1b0e.js" defer></script>
+    <script src="/assets/js/0.d8f548d6.js" defer></script><script src="/assets/js/app.9ff8b69b.js" defer></script>
   </body>
 </html>
