fixed assets loads

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Welcome</title>
     
     
-    <link rel="preload" href="/assets/css/2.styles.619f71fb.css" as="style"><link rel="preload" href="/assets/js/app.9ff8b69b.js" as="script"><link rel="preload" href="/assets/js/1.b65f6b51.js" as="script"><link rel="prefetch" href="/assets/js/0.d8f548d6.js">
-    <link rel="stylesheet" href="/assets/css/2.styles.619f71fb.css">
+    <link rel="preload" href="/blog/assets/css/2.styles.1faba3c2.css" as="style"><link rel="preload" href="/blog/assets/js/app.85385d39.js" as="script"><link rel="preload" href="/blog/assets/js/1.e947c6a4.js" as="script"><link rel="prefetch" href="/blog/assets/js/0.dfa7a99c.js">
+    <link rel="stylesheet" href="/blog/assets/css/2.styles.1faba3c2.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container no-navbar no-sidebar"><!----><div class="sidebar"><!----><ul class="sidebar-links"><li><a href="/" class="active sidebar-link">Welcome</a></li><li><a href="/setup-google-analytics-vuepress.html" class="sidebar-link">How to setup Google Analytics for VuePress</a></li></ul></div><div class="page"><div class="content"><h1 id="welcome"><a href="#welcome" aria-hidden="true" class="header-anchor">#</a> Welcome</h1></div><!----><div class="content page-nav"><p class="inner"><!----><span class="next"><a href="/setup-google-analytics-vuepress.html">
+    <div id="app" data-server-rendered="true"><div class="theme-container no-navbar no-sidebar"><!----><div class="sidebar"><!----><ul class="sidebar-links"><li><a href="/blog/" class="active sidebar-link">Welcome</a></li><li><a href="/blog/setup-google-analytics-vuepress.html" class="sidebar-link">How to setup Google Analytics for VuePress</a></li></ul></div><div class="page"><div class="content"><h1 id="welcome"><a href="#welcome" aria-hidden="true" class="header-anchor">#</a> Welcome</h1></div><!----><div class="content page-nav"><p class="inner"><!----><span class="next"><a href="/blog/setup-google-analytics-vuepress.html">
           How to setup Google Analytics for VuePress
         </a> →
       </span></p></div></div></div></div>
-    <script src="/assets/js/1.b65f6b51.js" defer></script><script src="/assets/js/app.9ff8b69b.js" defer></script>
+    <script src="/blog/assets/js/1.e947c6a4.js" defer></script><script src="/blog/assets/js/app.85385d39.js" defer></script>
   </body>
 </html>
