--- a/404.html
+++ b/404.html
@@ -6,11 +6,11 @@
     <title>VuePress</title>
     
     
-    <link rel="preload" href="/assets/css/2.styles.619f71fb.css" as="style"><link rel="preload" href="/assets/js/app.9ff8b69b.js" as="script"><link rel="prefetch" href="/assets/js/0.d8f548d6.js"><link rel="prefetch" href="/assets/js/1.b65f6b51.js">
-    <link rel="stylesheet" href="/assets/css/2.styles.619f71fb.css">
+    <link rel="preload" href="/blog/assets/css/2.styles.1faba3c2.css" as="style"><link rel="preload" href="/blog/assets/js/app.85385d39.js" as="script"><link rel="prefetch" href="/blog/assets/js/0.dfa7a99c.js"><link rel="prefetch" href="/blog/assets/js/1.e947c6a4.js">
+    <link rel="stylesheet" href="/blog/assets/css/2.styles.1faba3c2.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1><blockquote>Looks like we've got some broken links.</blockquote></div></div></div>
-    <script src="/assets/js/app.9ff8b69b.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1><blockquote>How did we get here?</blockquote></div></div></div>
+    <script src="/blog/assets/js/app.85385d39.js" defer></script>
   </body>
 </html>
