--- a/404.html
+++ b/404.html
@@ -6,11 +6,11 @@
     <title>VuePress</title>
     
     
-    <link rel="preload" href="/blog/assets/css/2.styles.730f9039.css" as="style"><link rel="preload" href="/blog/assets/js/app.65ede818.js" as="script"><link rel="prefetch" href="/blog/assets/js/0.3ddb19b3.js"><link rel="prefetch" href="/blog/assets/js/1.e947c6a4.js">
-    <link rel="stylesheet" href="/blog/assets/css/2.styles.730f9039.css">
+    <link rel="preload" href="/blog/assets/css/4.styles.4902bbea.css" as="style"><link rel="preload" href="/blog/assets/js/app.9961b29f.js" as="script"><link rel="prefetch" href="/blog/assets/js/1.3987cd92.js"><link rel="prefetch" href="/blog/assets/js/0.8af1b3f0.js"><link rel="prefetch" href="/blog/assets/js/2.b51eb6c8.js"><link rel="prefetch" href="/blog/assets/js/3.e542de2a.js">
+    <link rel="stylesheet" href="/blog/assets/css/4.styles.4902bbea.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1><blockquote>Looks like we've got some broken links.</blockquote></div></div></div>
-    <script src="/blog/assets/js/app.65ede818.js" defer></script>
+    <script src="/blog/assets/js/app.9961b29f.js" defer></script>
   </body>
 </html>
