--- a/index.html
+++ b/index.html
@@ -3,17 +3,30 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Welcome</title>
+    <title>Sun&#39;s Blog | Welcome</title>
     
     
-    <link rel="preload" href="/blog/assets/css/2.styles.730f9039.css" as="style"><link rel="preload" href="/blog/assets/js/app.65ede818.js" as="script"><link rel="preload" href="/blog/assets/js/1.e947c6a4.js" as="script"><link rel="prefetch" href="/blog/assets/js/0.3ddb19b3.js">
-    <link rel="stylesheet" href="/blog/assets/css/2.styles.730f9039.css">
+    <link rel="preload" href="/blog/assets/css/4.styles.4902bbea.css" as="style"><link rel="preload" href="/blog/assets/js/app.9961b29f.js" as="script"><link rel="preload" href="/blog/assets/js/2.b51eb6c8.js" as="script"><link rel="prefetch" href="/blog/assets/js/1.3987cd92.js"><link rel="prefetch" href="/blog/assets/js/0.8af1b3f0.js"><link rel="prefetch" href="/blog/assets/js/3.e542de2a.js">
+    <link rel="stylesheet" href="/blog/assets/css/4.styles.4902bbea.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container no-navbar no-sidebar"><!----><div class="sidebar"><!----><ul class="sidebar-links"><li><a href="/blog/" class="active sidebar-link">Welcome</a></li><li><a href="/blog/setup-google-analytics-vuepress.html" class="sidebar-link">How to setup Google Analytics for VuePress</a></li></ul></div><div class="page"><div class="content"><h1 id="welcome"><a href="#welcome" aria-hidden="true" class="header-anchor">#</a> Welcome</h1></div><!----><div class="content page-nav"><p class="inner"><!----><span class="next"><a href="/blog/setup-google-analytics-vuepress.html">
+    <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div><a href="/blog/" class="router-link-exact-active router-link-active"><!----><span class="site-name">
+      Sun's Blog
+    </span></a><div class="links"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""><!----></div><nav class="nav-links can-hide"><a href="/blog/" class="router-link-exact-active router-link-active">
+    Home
+  </a><a href="/blog/drawings/index.html">
+    Drawings
+  </a><!----></nav></div></header><div class="sidebar"><nav class="nav-links"><a href="/blog/" class="router-link-exact-active router-link-active">
+    Home
+  </a><a href="/blog/drawings/index.html">
+    Drawings
+  </a><!----></nav><ul class="sidebar-links"><li><a href="/blog/20170413/setup-google-analytics-vuepress.html" class="sidebar-link">How to setup Google Analytics for VuePress</a></li><li><a href="/blog/" class="active sidebar-link">Welcome</a></li><li><a href="/blog/drawings/index.html" class="sidebar-link">Drawings</a></li><li><a href="/blog/drawings/twitter.html" class="sidebar-link">Twitter</a></li></ul></div><div class="page"><div class="content"><h1 id="welcome"><a href="#welcome" aria-hidden="true" class="header-anchor">#</a> Welcome</h1><p>This website was generated using <a href="https://vuepress.vuejs.org/" target="_blank" rel="noopener noreferrer">VuePress</a>, a simple vue-friendly static site generator.</p><p>I am a front-end developer from Mauritius. I’ll be using this space to share stuff I care about.</p><p>Follow me on twitter 🇲🇺 <a href="https://twitter.com/__sun__" target="_blank" rel="noopener noreferrer">@_ _sun _ _</a></p></div><!----><div class="content page-nav"><p class="inner"><span class="prev">
+        ← <a href="/blog/20170413/setup-google-analytics-vuepress.html" class="prev">
           How to setup Google Analytics for VuePress
+        </a></span><span class="next"><a href="/blog/drawings/index.html">
+          Drawings
         </a> →
       </span></p></div></div></div></div>
-    <script src="/blog/assets/js/1.e947c6a4.js" defer></script><script src="/blog/assets/js/app.65ede818.js" defer></script>
+    <script src="/blog/assets/js/2.b51eb6c8.js" defer></script><script src="/blog/assets/js/app.9961b29f.js" defer></script>
   </body>
 </html>
