--- a/drawings/twitter.html
+++ b/drawings/twitter.html
@@ -6,8 +6,8 @@
     <title>Sun&#39;s Blog | Twitter</title>
     
     
-    <link rel="preload" href="/blog/assets/css/4.styles.4902bbea.css" as="style"><link rel="preload" href="/blog/assets/js/app.9961b29f.js" as="script"><link rel="preload" href="/blog/assets/js/0.8af1b3f0.js" as="script"><link rel="prefetch" href="/blog/assets/js/1.3987cd92.js"><link rel="prefetch" href="/blog/assets/js/2.b51eb6c8.js"><link rel="prefetch" href="/blog/assets/js/3.e542de2a.js">
-    <link rel="stylesheet" href="/blog/assets/css/4.styles.4902bbea.css">
+    <link rel="preload" href="/blog/assets/css/4.styles.9ab8a37a.css" as="style"><link rel="preload" href="/blog/assets/js/app.62218a6f.js" as="script"><link rel="preload" href="/blog/assets/js/0.8af1b3f0.js" as="script"><link rel="prefetch" href="/blog/assets/js/1.3987cd92.js"><link rel="prefetch" href="/blog/assets/js/2.b51eb6c8.js"><link rel="prefetch" href="/blog/assets/js/3.e542de2a.js">
+    <link rel="stylesheet" href="/blog/assets/css/4.styles.9ab8a37a.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div><a href="/blog/" class="router-link-active"><!----><span class="site-name">
@@ -20,10 +20,10 @@
     Home
   </a><a href="/blog/drawings/index.html">
     Drawings
-  </a><!----></nav><ul class="sidebar-links"><li><a href="/blog/20170413/setup-google-analytics-vuepress.html" class="sidebar-link">How to setup Google Analytics for VuePress</a></li><li><a href="/blog/" class="sidebar-link">Welcome</a></li><li><a href="/blog/drawings/index.html" class="sidebar-link">Drawings</a></li><li><a href="/blog/drawings/twitter.html" class="active sidebar-link">Twitter</a></li></ul></div><div class="page"><div class="content"><h1 id="twitter"><a href="#twitter" aria-hidden="true" class="header-anchor">#</a> Twitter</h1><p><img src="/blogassets/img/twitter.f1cdf171.jpg" alt="twitter"></p></div><!----><div class="content page-nav"><p class="inner"><span class="prev">
+  </a><!----></nav><ul class="sidebar-links"><li><a href="/blog/20170413/setup-google-analytics-vuepress.html" class="sidebar-link">How to setup Google Analytics for VuePress</a></li><li><a href="/blog/" class="sidebar-link">Welcome</a></li><li><a href="/blog/drawings/index.html" class="sidebar-link">Drawings</a></li><li><a href="/blog/drawings/twitter.html" class="active sidebar-link">Twitter</a></li></ul></div><div class="page"><div class="content"><h1 id="twitter"><a href="#twitter" aria-hidden="true" class="header-anchor">#</a> Twitter</h1><p><img src="/blog/assets/img/twitter.f1cdf171.jpg" alt="twitter"></p></div><!----><div class="content page-nav"><p class="inner"><span class="prev">
         ← <a href="/blog/drawings/index.html" class="prev">
           Drawings
         </a></span><!----></p></div></div></div></div>
-    <script src="/blog/assets/js/0.8af1b3f0.js" defer></script><script src="/blog/assets/js/app.9961b29f.js" defer></script>
+    <script src="/blog/assets/js/0.8af1b3f0.js" defer></script><script src="/blog/assets/js/app.62218a6f.js" defer></script>
   </body>
 </html>
