--- a/20170413/setup-google-analytics-vuepress.html
+++ b/20170413/setup-google-analytics-vuepress.html
@@ -6,8 +6,8 @@
     <title>Sun&#39;s Blog | How to setup Google Analytics for VuePress</title>
     
     
-    <link rel="preload" href="/blog/assets/css/4.styles.4902bbea.css" as="style"><link rel="preload" href="/blog/assets/js/app.9961b29f.js" as="script"><link rel="preload" href="/blog/assets/js/3.e542de2a.js" as="script"><link rel="prefetch" href="/blog/assets/js/1.3987cd92.js"><link rel="prefetch" href="/blog/assets/js/0.8af1b3f0.js"><link rel="prefetch" href="/blog/assets/js/2.b51eb6c8.js">
-    <link rel="stylesheet" href="/blog/assets/css/4.styles.4902bbea.css">
+    <link rel="preload" href="/blog/assets/css/4.styles.9ab8a37a.css" as="style"><link rel="preload" href="/blog/assets/js/app.62218a6f.js" as="script"><link rel="preload" href="/blog/assets/js/3.e542de2a.js" as="script"><link rel="prefetch" href="/blog/assets/js/1.3987cd92.js"><link rel="prefetch" href="/blog/assets/js/0.8af1b3f0.js"><link rel="prefetch" href="/blog/assets/js/2.b51eb6c8.js">
+    <link rel="stylesheet" href="/blog/assets/css/4.styles.9ab8a37a.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div><a href="/blog/" class="router-link-active"><!----><span class="site-name">
@@ -23,10 +23,10 @@
   </a><!----></nav><ul class="sidebar-links"><li><a href="/blog/20170413/setup-google-analytics-vuepress.html" class="active sidebar-link">How to setup Google Analytics for VuePress</a></li><li><a href="/blog/" class="sidebar-link">Welcome</a></li><li><a href="/blog/drawings/index.html" class="sidebar-link">Drawings</a></li><li><a href="/blog/drawings/twitter.html" class="sidebar-link">Twitter</a></li></ul></div><div class="page"><div class="content"><h1 id="how-to-setup-google-analytics-for-vuepress"><a href="#how-to-setup-google-analytics-for-vuepress" aria-hidden="true" class="header-anchor">#</a> How to setup Google Analytics for VuePress</h1><p>Simple open the vuepress config which is located at <code>.vuepress/config.js</code> and add the following to it :</p><pre class="language-text"><code>module.exports = {
   ga: &quot;YOUR_GA_TRACKING CODE&quot;
 };
-</code></pre><p>You’re all set!</p><p><img src="/blogassets/img/image.222d1b29.jpg" alt="GA Dashboard after the setup"></p></div><!----><div class="content page-nav"><p class="inner"><!----><span class="next"><a href="/blog/" class="router-link-active">
+</code></pre><p>You’re all set!</p><p><img src="/blog/assets/img/image.222d1b29.jpg" alt="GA Dashboard after the setup"></p></div><!----><div class="content page-nav"><p class="inner"><!----><span class="next"><a href="/blog/" class="router-link-active">
           Welcome
         </a> →
       </span></p></div></div></div></div>
-    <script src="/blog/assets/js/3.e542de2a.js" defer></script><script src="/blog/assets/js/app.9961b29f.js" defer></script>
+    <script src="/blog/assets/js/3.e542de2a.js" defer></script><script src="/blog/assets/js/app.62218a6f.js" defer></script>
   </body>
 </html>
